// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AllGroupsSettingsRow renders correctly 1`] = `
<SettingsRow
  imageUrl="/hylo-merkaba.png"
  name="All Groups"
  settings={
    Object {
      "sendEmail": true,
    }
  }
  update={[Function]}
/>
`;

exports[`MembershipSettingsRow renders correctly 1`] = `
<SettingsRow
  imageUrl="foo.png"
  name="Foomunity"
  settings={
    Object {
      "sendEmail": true,
    }
  }
  update={[Function]}
/>
`;

exports[`MessageSettingsRow renders correctly 1`] = `
<SettingsRow
  iconName="Messages"
  name="Messages"
  settings={
    Object {
      "sendEmail": true,
    }
  }
  update={[Function]}
/>
`;

exports[`NotificationSettingsTab renders correctly 1`] = `
<div>
  <div
    data-stylename="title"
  >
    <Icon
      name="Notifications"
    />
    Notifications
  </div>
  <div
    data-stylename="global-setting"
  >
    <div
      data-stylename="prompt"
    >
      How often would you like to receive email digests for new posts in your groups and saved searches?
    </div>
    <div
      data-stylename="setting-select"
    >
      <div
        data-stylename="select-explanation"
      >
        Send me a digest
      </div>
      <Select
        onChange={[Function]}
        options={
          Array [
            Object {
              "id": "daily",
              "label": "Daily",
            },
            Object {
              "id": "weekly",
              "label": "Weekly",
            },
            Object {
              "id": "never",
              "label": "Never",
            },
          ]
        }
        selected="daily"
      />
    </div>
  </div>
  <div
    data-stylename="global-setting"
  >
    <div
      data-stylename="prompt"
    >
      How would you like to receive notifications about
       
      new comments on posts you're following?
    </div>
    <div
      data-stylename="setting-select"
    >
      <div
        data-stylename="select-explanation"
      >
        Notify me via
      </div>
      <Select
        onChange={[Function]}
        options={
          Array [
            Object {
              "id": "none",
              "label": "None",
            },
            Object {
              "id": "email",
              "label": "Email",
            },
            Object {
              "id": "push",
              "label": "Mobile App",
            },
            Object {
              "id": "both",
              "label": "Both",
            },
          ]
        }
        selected="email"
      />
    </div>
  </div>
  <div>
    <div
      data-stylename="individual-groups"
    >
      NOTIFICATIONS
    </div>
    <MessageSettingsRow
      updateMessageSettings={[Function]}
    />
    <div
      data-stylename="individual-groups"
    >
      GROUP NOTIFICATIONS
    </div>
    <AllGroupsSettingsRow
      updateAllGroups={[Function]}
    />
    <MembershipSettingsRow
      key="1"
      membership={
        Object {
          "id": 1,
        }
      }
      updateMembershipSettings={[Function]}
    />
    <MembershipSettingsRow
      key="2"
      membership={
        Object {
          "id": 2,
        }
      }
      updateMembershipSettings={[Function]}
    />
  </div>
  <div
    data-stylename="help"
  >
    <p
      data-stylename="help-paragraph"
    />
  </div>
  <Tooltip
    delay={250}
    id="helpTip"
    position="top"
  />
</div>
`;

exports[`SettingsIcon renders correctly 1`] = `
<div
  data-for="helpTip"
  data-stylename="setting-controls highlightIcon"
  data-tip="Turn Email Notifications Off"
  onClick={[Function]}
>
  <Icon
    data-stylename="icon highlightIcon"
    name="EmailNotification"
  />
  <span
    data-stylename="setting-status"
  >
    On
  </span>
</div>
`;

exports[`SettingsRow renders correctly 1`] = `
<div
  data-stylename="settingsRow"
>
  <div
    data-stylename="nameRow"
  >
    <div
      data-stylename="groupAvatar"
      style={Object {}}
    />
    <span
      data-stylename="name"
    />
  </div>
  <div
    data-stylename="iconRow"
  >
    <SettingsIcon
      name="PushNotification"
      settingKey="sendPushNotifications"
      settings={
        Object {
          "sendEmail": true,
        }
      }
    />
    <SettingsIcon
      name="EmailNotification"
      settingKey="sendEmail"
      settings={
        Object {
          "sendEmail": true,
        }
      }
    />
  </div>
</div>
`;
